new theme and some moderate clean up of one post

--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ title: Understanding the Riemann Hypothesis
 canonifyurls: false
 
 DefaultContentLanguage: en
-theme: twentyfourteen
+theme: beautifulhugo
 metaDataFormat: yaml
 pygmentsUseClasses: true
 pygmentCodeFences: true
