--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://mshepherd.gitlab.io/riemannhypothesis.info/
+baseurl: https://riemannhypothesis.info/
 
 archetypeDir: archetypes
 assetDir: assets
