--- a/experiments/zeta_animation/pyproject.toml
+++ b/experiments/zeta_animation/pyproject.toml
@@ -27,6 +27,10 @@ target-version = "py312"
 [tool.mypy]
 python_version = "3.12"
 
+[[tool.mypy.overrides]]
+module = "mpmath.*"
+ignore_missing_imports = true
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
